@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Bug fix: update tabs history properly when jumping within the same file.
+* New feature: goto definition (Ctrl+backslash)
 * New feature: docstring for a buffer tag when Ctrl+F1 is pressed.
 * Bug fix: no more cursor jumping to another line if the feature of stripping
   trailing spaces on save is switched on and a line has trailing spaces and the
